--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,26 @@
 cmake_minimum_required(VERSION 3.21)
+
+set(ECP Economic-Planning)
+set(CMAKE_OBJECT_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/intermediate_objects)
+
+project(${ECP})
+
 set(CMAKE_CXX_STANDARD 17)
 
-set(CMAKE_OBJECT_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/intermediate_objects)
+# -------------------- Packages -------------------- #
+
+find_package(Vulkan)
+
+# Link against Vulkan
+target_link_libraries(MyProject PRIVATE ${Vulkan_LIBRARIES})
+
+
+find_package(OpenMP)
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(MyProject PRIVATE OpenMP::OpenMP_CXX)
+endif()
+
+# -------------------- Library -------------------- #
 
 # -------------------- Library -------------------- #
 
@@ -16,10 +35,11 @@ file(GLOB_RECURSE SRC
     "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cxx"
 )
 
-set(ECP Economic-Planning)
-project(${ECP})
-
 add_executable(${ECP} main.cpp ${SRC} ${INC})
+
+if(OpenMP_CXX_FOUND)
+    target_link_libraries(your_target_name OpenMP::OpenMP_CXX)
+endif()
 
 set_target_properties(${ECP} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_SYSTEM_NAME}/)
 
